syntax = "proto2";

package magnon.diagnose.details.proto;

message Config {
    optional string cache_dir = 1;
}
